Added Home and Routes

--- a/pickupreport.html
+++ b/pickupreport.html
@@ -22,7 +22,7 @@
 <body>
 	<div data-role="page" id="pickup">  
 		<div data-position="fixed" data-role="header" data-theme="b">  
-			<a data-icon="home" data-iconpos="notext" href="index.html">Home</a>  
+			<a rel="external" data-icon="home" data-iconpos="notext" href="home.html">Home</a>  
 			<h1>Boulder Food Rescue</h1>  
 		</div>  
 		<h3>Edit Pick Up Report</h3>
@@ -115,9 +115,9 @@
 			<textarea cols="40" rows="8" name="textarea" id="textarea"></textarea>
 
 		</div>
-		<label>Flag for Admin:
-			<input type="checkbox" name="checkbox-0" /></label>
-			<center><a href="pickupreport.html" data-role="button" data-theme="b" data-inline="true">Save Changes</a></center>
+		
+			<div align="center"><input type="checkbox" name="checkbox-0" />Flag for Admin</div>
+			<center><a rel="external" href="home.html" data-role="button" data-theme="b" data-inline="true">Save Changes</a></center>
 		</div>
 
 
