--- a/routes.html
+++ b/routes.html
@@ -21,28 +21,32 @@
 <body>
 	<div data-role="page" id="home">  
 		<div data-position="fixed" data-role="header" data-theme="b">  
-			<a data-icon="home" data-iconpos="notext" rel="external" href="home.html">Home</a>  
-			<h1>Boulder Food Rescue</h1>  
-		</div>  
-		<div data-role="content" id="contentConfirmation" name="contentConfirmation" align="center">  
-			<h1>Login Page</h1>  
-			<form id="HLogin" method="POST">  
-				<div data-role="fieldcontain">  
-					<label for="url">Username:</label>  
-					<input class="required" id="Lusername" name="uid_r" value="" type="text">            
-				</div>  
-				<div data-role="fieldcontain">  
-					<label for="url">Password:</label>  
-					<input id="Lpassword" name="pwd_r" value="" type="password">            
-				</div>  
-					<a rel="external" href="home.html" data-role="button" data-theme="b" data-inline="true">Sign In</a>
-					<!-- <a href="yolo.html" data-role="button" data-inline="true">Cancel</a> -->
-					<br>
-					<a href="#">Sign Up</a>
-					<br>
-					<a href="#">Forgot Your Password?</a>
-			</form> 
-		</div>  
-	</div>  
+			<a rel="external"data-icon="home" data-iconpos="notext" href="home.html">Home</a>  
+			<h1>Boulder Food Rescue</h1> 
+
+			<a rel="external"data-icon="grid" data-iconpos="notext" href="home.html">Grid</a>
+		</div>
+		<h1>Todays Routes</h1>
+		<h3>Shift 1</h3>
+		<table style="width:200px">
+			<tr>
+				<td>Donor</td>
+				<td>xxx</td>		
+			</tr>
+			<tr>
+				<td>Recipient</td>
+				<td>xxx</td>		
+			</tr>
+			<tr>
+				<td>Volunteers</td>
+				<td>xxx</td>		
+			</tr>
+			<tr>
+				<td>Time Frame</td>
+				<td>xxx</td>		
+			</tr>
+		</table>
+
+	</div>
 </body>
 </html>
