Updating Sign In Pages

--- a/pickupreport.html
+++ b/pickupreport.html
@@ -17,14 +17,15 @@
 	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.core.min.js"></script>
 	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.mode.flipbox.min.js"></script>
 	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/i18n/jquery.mobile.datebox.i18n.en_US.utf8.js"></script>
-
 </head>
 <body>
 	<div data-role="page" id="pickup">  
 		<div data-position="fixed" data-role="header" data-theme="b">  
-			<a rel="external" data-icon="home" data-iconpos="notext" href="home.html">Home</a>  
-			<h1>Boulder Food Rescue</h1>  
-		</div>  
+			<a rel="external"data-icon="home" data-iconpos="notext" href="home.html">Home</a>  
+			<h1>BFR</h1> 
+
+			<a rel="external"data-icon="grid" data-iconpos="notext" href="home.html">Grid</a>
+		</div> 
 		<h3>Edit Pick Up Report</h3>
 		<h3><center>Date</center></h3>
 		<input name="mydate" id="mydate" type="date" data-theme="b" data-role="datebox" data-options='{"mode": "flipbox"}'>
