--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
 	<div data-role="page" id="home">  
 		<div data-position="fixed" data-role="header" data-theme="b">  
 			<a rel="external"data-icon="home" data-iconpos="notext" href="home.html">Home</a>  
-			<h1>Boulder Food Rescue</h1> 
+			<h1>BFR</h1> 
 
 			<a rel="external"data-icon="grid" data-iconpos="notext" href="home.html">Grid</a>
 		</div> 
