--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <body>
 	<div data-role="page" id="home">  
 		<div data-position="fixed" data-role="header" data-theme="b">  
-			<a data-icon="home" data-iconpos="notext" rel="external" href="home.html">Home</a>  
-			<h1>Boulder Food Rescue</h1>  
+			<!-- <a data-icon="home" data-iconpos="notext" rel="external" href="home.html">Home</a>  --> 
+			<h1>BFR</h1>  
 		</div>  
 		<div data-role="content" id="contentConfirmation" name="contentConfirmation" align="center">  
 			<h1>Login Page</h1>  
@@ -35,12 +35,12 @@
 					<label for="url">Password:</label>  
 					<input id="Lpassword" name="pwd_r" value="" type="password">            
 				</div>  
-					<a rel="external" href="home.html" data-role="button" data-theme="b" data-inline="true">Sign In</a>
-					<!-- <a href="yolo.html" data-role="button" data-inline="true">Cancel</a> -->
-					<br>
-					<a href="#">Sign Up</a>
-					<br>
-					<a href="#">Forgot Your Password?</a>
+				<a rel="external" href="home.html" data-role="button" data-theme="b" data-inline="true">Sign In</a>
+				
+				<br>
+				<a href="signup.html">Sign Up</a>
+				<br>
+				<a href="forgotpassword.html">Forgot Your Password?</a>
 			</form> 
 		</div>  
 	</div>  
