Updated Small Bugs

--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -24,13 +24,13 @@
 			<!-- <a data-icon="home" data-iconpos="notext" rel="external" href="home.html">Home</a>  --> 
 			<h1>BFR</h1>  
 		</div> 
-		<h1>Create your BFR Account</h1>
+		<h1>Forgot Your Password</h1>
 		<form id="HLogin" method="POST">  
 			<div data-role="fieldcontain">  
 				<label for="url">Username:</label>  
 				<input class="required" id="Lusername" name="uid_r" value="" type="text">            
 			</div>  
-			
+
 			<center><a rel="external" href="index.html" data-role="button" data-theme="b" data-inline="true">Submit</a></center>
 		</form>  
 	</div>
