--- a/pickupreport.html
+++ b/pickupreport.html
@@ -65,7 +65,7 @@
 
 		<h3><center>Data</center></h3>	
 		<center>Enter the weight/count for each food type</center>
-		<select name="produce" id="produce">
+		<select name="produce" id="produce" multiple="multiple" data-native-menu="false">
 			<option>Produce</option>
 			<option value="mon">1</option>
 			<option value="tue">2</option>
@@ -117,12 +117,14 @@
 
 		</div>
 		
+		<div data-role="fieldcontain">
 			<div align="center"><input type="checkbox" name="checkbox-0" />Flag for Admin</div>
-			<center><a rel="external" href="home.html" data-role="button" data-theme="b" data-inline="true">Save Changes</a></center>
 		</div>
-
-
-
+		<center><a rel="external" href="home.html" data-role="button" data-theme="b" data-inline="true">Save Changes</a></center>
 	</div>
+
+
+
+</div>
 </body>
 </html>
