--- a/pickupreport.html
+++ b/pickupreport.html
@@ -118,8 +118,12 @@
 		</div>
 		
 		<div data-role="fieldcontain">
-			<div align="center"><input type="checkbox" name="checkbox-0" />Flag for Admin</div>
-		</div>
+ 	<fieldset data-role="controlgroup">
+		<legend>Flag for Admin:</legend>
+		<input type="checkbox" name="checkbox-1" id="checkbox-1" class="custom" />
+		
+    </fieldset>
+</div>
 		<center><a rel="external" href="home.html" data-role="button" data-theme="b" data-inline="true">Save Changes</a></center>
 	</div>
 
