Adding dropdown to navbar while icon missing

--- a/home.html
+++ b/home.html
@@ -3,31 +3,46 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<title>Boulder Food Rescue</title>
+	<title>
+		Boulder Food Rescue
+	</title>
 	<link rel="stylesheet" href="themes/Bootstrap.css">
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0/jquery.mobile.structure-1.4.0.min.css" />
 	<link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
-	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-	<script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
+	<script src="http://code.jquery.com/jquery-1.8.2.min.js">
+	</script>
+	<script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js">
+	</script>
 
 	<!-- DatePicker -->
 	<link rel="stylesheet" type="text/css" href="http://code.jquery.com/mobile/latest/jquery.mobile.min.css" />
 	<link rel="stylesheet" type="text/css" href="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.min.css" /> 
 
-	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.core.min.js"></script>
-	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.mode.flipbox.min.js"></script>
-	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/i18n/jquery.mobile.datebox.i18n.en_US.utf8.js"></script>
+	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.core.min.js">
+	</script>
+	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.mode.flipbox.min.js">
+	</script>
+	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/i18n/jquery.mobile.datebox.i18n.en_US.utf8.js">
+	</script>
 </head>
 <body>
 	<div data-role="page" id="home">  
 		<div data-position="fixed" data-role="header" data-theme="b">  
-			<a rel="external"data-icon="home" data-iconpos="notext" href="home.html">Home</a>  
+			<a rel="external" data-icon="home" data-iconpos="notext" href="home.html">
+				Home
+			</a>  
 			<h1>Boulder Food Rescue</h1> 
-
-			<a rel="external"data-icon="grid" data-iconpos="notext" href="home.html">Grid</a>
+			<a rel="external"data-icon="grid" data-iconpos="notext" href="menu.html">
+				Grid
+			</a>
 		</div> 
-		<a rel="external"href="pickupreport.html" data-role="button" data-theme="b" data-inline="true">Edit Pickup Report</a>
-		<a rel="external"href="routes.html" data-role="button" data-theme="b" data-inline="true">View Todays Routes</a>
+		<a rel="external"href="pickupreport.html" data-role="button" data-theme="b" data-inline="true">
+			Edit Pickup Report
+		</a>
+		<br/>
+		<a rel="external"href="routes.html" data-role="button" data-theme="b" data-inline="true">
+			View Todays Routes
+		</a>
 
 	</div>
 </body>
