--- a/menu.html
+++ b/menu.html
@@ -6,9 +6,13 @@
 	<title>Boulder Food Rescue</title>
 	<link rel="stylesheet" href="themes/Bootstrap.css">
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0/jquery.mobile.structure-1.4.0.min.css" />
+	<script href="themes/js/boostrap-dropdown.js"></script>
+	<link rel="stylesheet" href="themes/css/boostrap_2-1-1.css">
+	<script href="themes/js/boostrap-dropdown_2-1-1.js"></script>
 	<link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
 	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-	<script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
+	<script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js">
+	</script>
 
 	<!-- DatePicker -->
 	<link rel="stylesheet" type="text/css" href="http://code.jquery.com/mobile/latest/jquery.mobile.min.css" />
@@ -16,38 +20,48 @@
 
 	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.core.min.js"></script>
 	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.mode.flipbox.min.js"></script>
-	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/i18n/jquery.mobile.datebox.i18n.en_US.utf8.js"></script>
+	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/i18n/jquery.mobile.datebox.i18n.en_US.utf8.js">
+	</script>
 </head>
 <body>
 	<div data-role="page" id="home">  
 		<div data-position="fixed" data-role="header" data-theme="b">  
-			<a data-icon="home" data-iconpos="notext" rel="external" href="home.html">
-				Home
-			</a>
-			<h1>Boulder Food Rescue</h1>  
-			<a rel="external"data-icon="grid" data-iconpos="notext" href="menu.html">
+			<a rel="external" data-icon="home" data-iconpos="notext" href="home.html">Home</a>  
+			<h1>
+				Boulder Food Rescue
+			</h1> 
+			
+				<a  rel="external" data-icon="grid" data-iconpos="notext" href="menu.html">	
 				Grid
-			</a>
-		</div>  
+				</a>
+			
+		</div> 
 		<div data-role="content" id="contentConfirmation" name="contentConfirmation" align="center">  
-			<h1>Login Page</h1>  
-			<form id="HLogin" method="POST">  
-				<div data-role="fieldcontain">  
+			<h1>
+				Account
+			</h1>  
+			<form id="HLogin" method="GET">  
+				<!-- <div data-role="fieldcontain">  
 					<label for="url">Username:</label>  
 					<input class="required" id="Lusername" name="uid_r" value="" type="text">            
 				</div>  
 				<div data-role="fieldcontain">  
 					<label for="url">Password:</label>  
 					<input id="Lpassword" name="pwd_r" value="" type="password">            
-				</div>  
-					<a rel="external" href="home.html" data-role="button" data-theme="b" data-inline="true">Sign In</a>
-					<!-- <a href="yolo.html" data-role="button" data-inline="true">Cancel</a> -->
+				</div> -->  
+					<a rel="external" href="index.html" data-role="button" data-theme="c" data-inline="false">
+						<span class="ui-btn-inner ui-btn-corner-all">
+							<span class="ui-btn-text">
+								Log Out
+							</span>
+						</span>
+					</a>
 					<br>
-					<a href="#">Sign Up</a>
+
 					<br>
 					<a href="#">Forgot Your Password?</a>
 			</form> 
 		</div>  
-	</div>  
+	</div>
 </body>
 </html>
