--- a/pickupreport.html
+++ b/pickupreport.html
@@ -22,8 +22,13 @@
 <body>
 	<div data-role="page" id="pickup">  
 		<div data-position="fixed" data-role="header" data-theme="b">  
-			<a rel="external" data-icon="home" data-iconpos="notext" href="home.html">Home</a>  
+			<a rel="external" data-icon="home" data-iconpos="notext" href="home.html">
+				Home
+			</a> 
 			<h1>Boulder Food Rescue</h1>  
+			<a rel="external"data-icon="grid" data-iconpos="notext" href="menu.html">
+				Grid
+			</a>
 		</div>  
 		<h3>Edit Pick Up Report</h3>
 		<h3><center>Date</center></h3>
