--- a/routes.html
+++ b/routes.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>Boulder Food Rescue</title>
 	<link rel="stylesheet" href="themes/Bootstrap.css">
+	<link rel="stylesheet" href="themes/js/boostrap-dropdown.js">
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0/jquery.mobile.structure-1.4.0.min.css" />
 	<link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
 	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
@@ -23,8 +24,7 @@
 		<div data-position="fixed" data-role="header" data-theme="b">  
 			<a rel="external"data-icon="home" data-iconpos="notext" href="home.html">Home</a>  
 			<h1>Boulder Food Rescue</h1> 
-
-			<a rel="external"data-icon="grid" data-iconpos="notext" href="home.html">Grid</a>
+			<a rel="external"data-icon="grid" data-iconpos="notext" href="menu.html">Grid</a>
 		</div>
 		<h1>Todays Routes</h1>
 		<h3>Shift 1</h3>
