Adding Power Logo for Logout. Dropdown may be needed l8r

--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
 				Home
 			</a>  
 			<h1>Boulder Food Rescue</h1> 
-			<a rel="external"data-icon="grid" data-iconpos="notext" href="menu.html">
+			<a rel="external"data-icon="power" data-iconpos="notext" href="menu.html">
 				Grid
 			</a>
 		</div> 
