--- a/dropdown-test2.html
+++ b/dropdown-test2.html
@@ -16,6 +16,10 @@
   }
   </style>
 
+<link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
+<link rel="stylesheet" href="themes/Bootstrap.css">
+  <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0/jquery.mobile.structure-1.4.0.min.css" />
+
 </head>
 
 <body>
@@ -68,6 +72,7 @@
   </div>
 
   <script type="text/javascript" src="themes/js/bootstrap-dropdown_2-1-1.js"></script>
+  <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
 
 </body>
 </html>
