--- a/routes.html
+++ b/routes.html
@@ -24,7 +24,7 @@
 			<a rel="external"data-icon="home" data-iconpos="notext" href="home.html">Home</a>  
 			<h1>BFR</h1> 
 
-			<a rel="external"data-icon="grid" data-iconpos="notext" href="home.html">Grid</a>
+			<a rel="external"data-icon="power" data-iconpos="notext" href="index.html">Log Out</a>
 		</div>
 		<h1>Todays Routes</h1>
 		<h3>Shift 1</h3>
