--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
 			<a rel="external"data-icon="home" data-iconpos="notext" href="home.html">Home</a>  
 			<h1>BFR</h1> 
 
-			<a rel="external"data-icon="grid" data-iconpos="notext" href="home.html">Grid</a>
+			<a rel="external"data-icon="power" data-iconpos="notext" href="index.html">Log Out</a>
 		</div> 
 		<a rel="external"href="pickupreport.html" data-role="button" data-theme="b" data-inline="true">Edit Pickup Report</a>
 		<a rel="external"href="routes.html" data-role="button" data-theme="b" data-inline="true">View Todays Routes</a>
