Fixing margin on pick up report page

--- a/home.html
+++ b/home.html
@@ -26,9 +26,20 @@
 
 			<a rel="external"data-icon="power" data-iconpos="notext" href="index.html">Log Out</a>
 		</div> 
-		<a rel="external"href="pickupreport.html" data-role="button" data-theme="b" data-inline="true">Edit Pickup Report</a>
-		<a rel="external"href="routes.html" data-role="button" data-theme="b" data-inline="true">View Todays Routes</a>
-
+		<a rel="external" href="pickupreport.html" data-role="button" data-theme="b" data-inline="false">
+			<span class="ui-btn-inner ui-btn-corner-all">
+				<span class="ui-btn-text">
+					Edit Pickup Report
+				</span>
+			</span>
+		</a>
+		<a rel="external" href="routes.html" data-role="button" data-theme="b" data-inline="false">
+			<span class="ui-btn-inner ui-btn-corner-all">
+				<span class="ui-btn-text">
+					View Todays Routes
+				</span>
+			</span>
+		</a>
 	</div>
 </body>
 </html>
