--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>Boulder Food Rescue</title>
 	<link rel="stylesheet" href="themes/Bootstrap.css">
+	<script href="themes/js/boostrap-dropdown.js"></script>
+	<link rel="stylesheet" href="themes/css/boostrap_2-1-1.css">
+	<script href="themes/js/boostrap-dropdown_2-1-1.js"></script>
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0/jquery.mobile.structure-1.4.0.min.css" />
 	<link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
 	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
@@ -38,7 +41,13 @@
 				<a rel="external" href="home.html" data-role="button" data-theme="b" data-inline="true">Sign In</a>
 				
 				<br>
-				<a href="signup.html">Sign Up</a>
+				<a href="signup.html" data-inline="false">
+					<span class="ui-btn-inner ui-btn-corner-all">
+						<span class="ui-btn-text">
+							Sign Up
+						</span>
+					</span>
+				</a>
 				<br>
 				<a href="forgotpassword.html">Forgot Your Password?</a>
 			</form> 
