--- a/pickupreport.html
+++ b/pickupreport.html
@@ -21,109 +21,141 @@
 <body>
 	<div data-role="page" id="pickup">  
 		<div data-position="fixed" data-role="header" data-theme="b">  
-			<a rel="external"data-icon="home" data-iconpos="notext" href="home.html">Home</a>  
-			<h1>BFR</h1> 
+			<a rel="external"data-icon="home" data-iconpos="notext" href="home.html">
+				Home
+			</a>  
+			<h1>
+				BFR
+			</h1> 
 
-			<a rel="external"data-icon="power" data-iconpos="notext" href="index.html">Log Out</a>
+			<a rel="external"data-icon="power" data-iconpos="notext" href="index.html">
+				Log Out
+			</a>
 		</div> 
-		<h3>Edit Pick Up Report</h3>
-		<h3><center>Date</center></h3>
-		<input name="mydate" id="mydate" type="date" data-theme="b" data-role="datebox" data-options='{"mode": "flipbox"}'>
+		<h3>
+			<center>
+				Edit Pick Up Report
+			</center>
+		</h3>
+		<h3>
+			<center>
+				Date
+			</center>
+		</h3>
+		
+		<div style="margin: 15px">
+			<input name="mydate" id="mydate" type="date" data-theme="b" data-role="datebox" data-options='{"mode": "flipbox"}'>
+		</div>
 
-		<select name="volunteers" id="volunteers" multiple="multiple" data-native-menu="false">
-			<option>Volunteers</option>
-			<option value="mon">1</option>
-			<option value="tue">2</option>
-			<option value="wed">3</option>
-			<option value="thu">4</option>
-			<option value="fri">5</option>
-			<option value="sat">6</option>
-			<option value="sun">7</option>
-		</select>
+		<div style="margin: 15px">
+			<select name="volunteers" id="volunteers" multiple="multiple" data-native-menu="false">
+				<option>Volunteers</option>
+				<option value="mon">1</option>
+				<option value="tue">2</option>
+				<option value="wed">3</option>
+				<option value="thu">4</option>
+				<option value="fri">5</option>
+				<option value="sat">6</option>
+				<option value="sun">7</option>
+			</select>
+		</div>
 
-		<select name="donor" id="donor" multiple="multiple" data-native-menu="false">
-			<option>Donor</option>
-			<option value="mon">1</option>
-			<option value="tue">2</option>
-			<option value="wed">3</option>
-			<option value="thu">4</option>
-			<option value="fri">5</option>
-			<option value="sat">6</option>
-			<option value="sun">7</option>
-		</select>
+		<div style="margin: 15px">
+			<select name="donor" id="donor" multiple="multiple" data-native-menu="false">
+				<option>Donor</option>
+				<option value="mon">1</option>
+				<option value="tue">2</option>
+				<option value="wed">3</option>
+				<option value="thu">4</option>
+				<option value="fri">5</option>
+				<option value="sat">6</option>
+				<option value="sun">7</option>
+			</select>
+		</div>
 
-		<select name="recipient" id="recipient" multiple="multiple" data-native-menu="false">
-			<option>Recipient</option>
-			<option value="mon">1</option>
-			<option value="tue">2</option>
-			<option value="wed">3</option>
-			<option value="thu">4</option>
-			<option value="fri">5</option>
-			<option value="sat">6</option>
-			<option value="sun">7</option>
-		</select>
+		<div style="margin: 15px">
+			<select name="recipient" id="recipient" multiple="multiple" data-native-menu="false">
+				<option>Recipient</option>
+				<option value="mon">1</option>
+				<option value="tue">2</option>
+				<option value="wed">3</option>
+				<option value="thu">4</option>
+				<option value="fri">5</option>
+				<option value="sat">6</option>
+				<option value="sun">7</option>
+			</select>
+		</div>
 
 		<h3><center>Data</center></h3>	
 		<center>Enter the weight/count for each food type</center>
-		<select name="produce" id="produce" multiple="multiple" data-native-menu="false">
-			<option>Produce</option>
-			<option value="mon">1</option>
-			<option value="tue">2</option>
-			<option value="wed">3</option>
-			<option value="thu">4</option>
-			<option value="fri">5</option>
-			<option value="sat">6</option>
-			<option value="sun">7</option>
-		</select>
-		
-		<div data-role="fieldcontain">
+
+		<div style="margin: 15px">
+			<select name="produce" id="produce" multiple="multiple" data-native-menu="false">
+				<option>Produce</option>
+				<option value="mon">1</option>
+				<option value="tue">2</option>
+				<option value="wed">3</option>
+				<option value="thu">4</option>
+				<option value="fri">5</option>
+				<option value="sat">6</option>
+				<option value="sun">7</option>
+			</select>
+		</div>
+
+		<div style="margin: 15px" data-role="fieldcontain">
 			<label for="name">Weight:</label>
 			<input type="text" name="name" id="name" value=""  />
 		</div>
-		<div data-role="fieldcontain">
+
+		<div style="margin: 15px" data-role="fieldcontain">
 			<label for="name">Count:</label>
 			<input type="text" name="name" id="name" value=""  />
 		</div>
-		<div data-role="fieldcontain">
+
+		<div style="margin: 15px" data-role="fieldcontain">
 			<label for="name">Description:</label>
 			<input type="text" name="name" id="name" value=""  />
 		</div>
 
-		<select name="weighedwith" id="weighedwith">
-			<option>Weighed With</option>
-			<option value="mon">1</option>
-			<option value="tue">2</option>
-			<option value="wed">3</option>
-			<option value="thu">4</option>
-			<option value="fri">5</option>
-			<option value="sat">6</option>
-			<option value="sun">7</option>
-		</select>
+		<div style="margin: 15px">
+			<select name="weighedwith" id="weighedwith">
+				<option>Weighed With</option>
+				<option value="mon">1</option>
+				<option value="tue">2</option>
+				<option value="wed">3</option>
+				<option value="thu">4</option>
+				<option value="fri">5</option>
+				<option value="sat">6</option>
+				<option value="sun">7</option>
+			</select>
+		</div>
 
-		<select name="transportedwith" id="transportedwith">
-			<option>Transported With</option>
-			<option value="mon">1</option>
-			<option value="tue">2</option>
-			<option value="wed">3</option>
-			<option value="thu">4</option>
-			<option value="fri">5</option>
-			<option value="sat">6</option>
-			<option value="sun">7</option>
-		</select>
+		<div style="margin: 15px">
+			<select name="transportedwith" id="transportedwith">
+				<option>Transported With</option>
+				<option value="mon">1</option>
+				<option value="tue">2</option>
+				<option value="wed">3</option>
+				<option value="thu">4</option>
+				<option value="fri">5</option>
+				<option value="sat">6</option>
+				<option value="sun">7</option>
+			</select>
+		</div>
 
-		<div data-role="fieldcontain">
+		<div style="margin: 15px" data-role="fieldcontain">
 			<label for="textarea">Notes:</label>
 			<textarea cols="40" rows="8" name="textarea" id="textarea"></textarea>
 
 		</div>
 		
-		<div data-role="fieldcontain">
- 	<fieldset data-role="controlgroup">
-		<legend>Flag for Admin:</legend>
-		<input type="checkbox" name="checkbox-1" id="checkbox-1" class="custom" />
-		
-    </fieldset>
-</div>
+		<div style="margin: 15px" data-role="fieldcontain">
+	 		<fieldset data-role="controlgroup">
+				<legend>Flag for Admin:</legend>
+				<input type="checkbox" name="checkbox-1" id="checkbox-1" class="custom" />
+	    	</fieldset>
+		</div>
+
 		<center><a rel="external" href="home.html" data-role="button" data-theme="b" data-inline="true">Save Changes</a></center>
 	</div>
 
