Editing buttons font and color

--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>Boulder Food Rescue</title>
 	<link rel="stylesheet" href="themes/Bootstrap.css">
+	<link rel="stylesheet" href="themes/application.css">
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0/jquery.mobile.structure-1.4.0.min.css" />
 	<link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
 	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
@@ -26,20 +27,24 @@
 
 			<a rel="external"data-icon="power" data-iconpos="notext" href="index.html">Log Out</a>
 		</div> 
-		<a rel="external" href="pickupreport.html" data-role="button" data-theme="b" data-inline="false">
-			<span class="ui-btn-inner ui-btn-corner-all">
-				<span class="ui-btn-text">
-					Edit Pickup Report
+		<div style="margin: 15px">
+			<a rel="external" href="pickupreport.html" data-role="button" data-theme="c" data-inline="false">
+				<span class="ui-btn-inner ui-btn-corner-all">
+					<span class="button">
+						Edit Pickup Report
+					</span>
 				</span>
-			</span>
-		</a>
-		<a rel="external" href="routes.html" data-role="button" data-theme="b" data-inline="false">
-			<span class="ui-btn-inner ui-btn-corner-all">
-				<span class="ui-btn-text">
-					View Todays Routes
+			</a>
+		</div> 
+		<div style="margin: 15px">
+			<a rel="external" href="routes.html" data-role="button" data-theme="c" data-inline="false">
+				<span class="ui-btn-inner ui-btn-corner-all">
+					<span class="button">
+						View Todays Routes
+					</span>
 				</span>
-			</span>
-		</a>
+			</a>
+		</div> 
 	</div>
 </body>
 </html>
