Adding single select menus to pickupreport

--- a/pickupreport.html
+++ b/pickupreport.html
@@ -30,50 +30,50 @@
 		<h3><center>Date</center></h3>
 		<input name="mydate" id="mydate" type="date" data-theme="b" data-role="datebox" data-options='{"mode": "flipbox"}'>
 
-		<select name="volunteers" id="volunteers" multiple="multiple" data-native-menu="false">
-			<option>Volunteers</option>
-			<option value="mon">1</option>
-			<option value="tue">2</option>
-			<option value="wed">3</option>
-			<option value="thu">4</option>
-			<option value="fri">5</option>
-			<option value="sat">6</option>
-			<option value="sun">7</option>
+		<select name="volunteers" id="volunteers" data-native-menu="false">
+			<option>Volunteer</option>
+			<option value="mon">Gretchen</option>
+			<option value="tue">Merk</option>
+			<option value="wed">Bawb</option>
+			<option value="thu">Hollah</option>
+			<option value="fri">Atcha</option>
+			<option value="sat">Yolohonda</option>
+			<option value="sun">Z</option>
 		</select>
 
-		<select name="donor" id="donor" multiple="multiple" data-native-menu="false">
+		<select name="donor" id="donor" data-native-menu="false">
 			<option>Donor</option>
-			<option value="mon">1</option>
-			<option value="tue">2</option>
-			<option value="wed">3</option>
-			<option value="thu">4</option>
-			<option value="fri">5</option>
-			<option value="sat">6</option>
-			<option value="sun">7</option>
+			<option value="mon">Donor1</option>
+			<option value="tue">Donor2</option>
+			<option value="wed">Donor3</option>
+			<option value="thu">Donor4</option>
+			<option value="fri">Donor5</option>
+			<option value="sat">Donor6</option>
+			<option value="sun">Donor7</option>
 		</select>
 
-		<select name="recipient" id="recipient" multiple="multiple" data-native-menu="false">
+		<select name="recipient" id="recipient" data-native-menu="false">
 			<option>Recipient</option>
-			<option value="mon">1</option>
-			<option value="tue">2</option>
-			<option value="wed">3</option>
-			<option value="thu">4</option>
-			<option value="fri">5</option>
-			<option value="sat">6</option>
-			<option value="sun">7</option>
+			<option value="mon">Recipient1</option>
+			<option value="tue">Recipient2</option>
+			<option value="wed">Recipient3</option>
+			<option value="thu">Recipient4</option>
+			<option value="fri">Recipient5</option>
+			<option value="sat">Recipient6</option>
+			<option value="sun">Recipient7</option>
 		</select>
 
 		<h3><center>Data</center></h3>	
 		<center>Enter the weight/count for each food type</center>
-		<select name="produce" id="produce" multiple="multiple" data-native-menu="false">
+		<select name="produce" id="produce" data-native-menu="false">
 			<option>Produce</option>
-			<option value="mon">1</option>
-			<option value="tue">2</option>
-			<option value="wed">3</option>
-			<option value="thu">4</option>
-			<option value="fri">5</option>
-			<option value="sat">6</option>
-			<option value="sun">7</option>
+			<option value="mon">Produce1</option>
+			<option value="tue">Produce2</option>
+			<option value="wed">Produce3</option>
+			<option value="thu">Produce4</option>
+			<option value="fri">Produce5</option>
+			<option value="sat">Produce6</option>
+			<option value="sun">Produce7</option>
 		</select>
 		
 		<div data-role="fieldcontain">
@@ -89,26 +89,26 @@
 			<input type="text" name="name" id="name" value=""  />
 		</div>
 
-		<select name="weighedwith" id="weighedwith">
+		<select name="weighedwith" id="weighedwith" data-native-menu="false">
 			<option>Weighed With</option>
-			<option value="mon">1</option>
-			<option value="tue">2</option>
-			<option value="wed">3</option>
-			<option value="thu">4</option>
-			<option value="fri">5</option>
-			<option value="sat">6</option>
-			<option value="sun">7</option>
+			<option value="mon">Option1</option>
+			<option value="tue">Option2</option>
+			<option value="wed">Option3</option>
+			<option value="thu">Option4</option>
+			<option value="fri">Option5</option>
+			<option value="sat">Option6</option>
+			<option value="sun">Option7</option>
 		</select>
 
-		<select name="transportedwith" id="transportedwith">
+		<select name="transportedwith" id="transportedwith" data-native-menu="false">
 			<option>Transported With</option>
-			<option value="mon">1</option>
-			<option value="tue">2</option>
-			<option value="wed">3</option>
-			<option value="thu">4</option>
-			<option value="fri">5</option>
-			<option value="sat">6</option>
-			<option value="sun">7</option>
+			<option value="mon">Option1</option>
+			<option value="tue">Option2</option>
+			<option value="wed">Option3</option>
+			<option value="thu">Option4</option>
+			<option value="fri">Option5</option>
+			<option value="sat">Option6</option>
+			<option value="sun">Option7</option>
 		</select>
 
 		<div data-role="fieldcontain">
