Adding CSS file and new classes for better pickupreport page (center button texts)

--- a/home.html
+++ b/home.html
@@ -15,7 +15,11 @@
 	<link rel="stylesheet" type="text/css" href="http://code.jquery.com/mobile/latest/jquery.mobile.min.css" />
 	<link rel="stylesheet" type="text/css" href="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.min.css" /> 
 
-	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.core.min.js"></script>
+	<!--
+		<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.core.min.js">
+		</script>
+	-->
+	<script type="text/javascript" src="themes/js/jqm-datebox.core.min.js"></script>
 	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.mode.flipbox.min.js"></script>
 	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/i18n/jquery.mobile.datebox.i18n.en_US.utf8.js"></script>
 </head>
@@ -30,7 +34,7 @@
 		<div style="margin: 15px">
 			<a rel="external" href="pickupreport.html" data-role="button" data-theme="c" data-inline="false">
 				<span class="ui-btn-inner ui-btn-corner-all">
-					<span class="button">
+					<span class="main_button">
 						Edit Pickup Report
 					</span>
 				</span>
@@ -39,7 +43,7 @@
 		<div style="margin: 15px">
 			<a rel="external" href="routes.html" data-role="button" data-theme="c" data-inline="false">
 				<span class="ui-btn-inner ui-btn-corner-all">
-					<span class="button">
+					<span class="main_button">
 						View Todays Routes
 					</span>
 				</span>
