--- a/pickupreport.html
+++ b/pickupreport.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>Boulder Food Rescue</title>
 	<link rel="stylesheet" href="themes/Bootstrap.css">
+	<link rel="stylesheet" href="themes/application.css">
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0/jquery.mobile.structure-1.4.0.min.css" />
 	<link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
 	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
@@ -14,10 +15,21 @@
 	<link rel="stylesheet" type="text/css" href="http://code.jquery.com/mobile/latest/jquery.mobile.min.css" />
 	<link rel="stylesheet" type="text/css" href="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.min.css" /> 
 
-	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.core.min.js"></script>
+	<!--
+		<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.core.min.js">
+		</script>
+	-->
+	<script type="text/javascript" src="themes/js/jqm-datebox.core.min.js"></script>
+
 	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.mode.flipbox.min.js"></script>
 	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/i18n/jquery.mobile.datebox.i18n.en_US.utf8.js"></script>
 </head>
+<style type="text/css">
+	.field_title {
+		margin: 12px; 
+		color: black;
+	}
+</style>
 <body>
 	<div data-role="page" id="pickup">  
 		<div data-position="fixed" data-role="header" data-theme="b">  
@@ -37,18 +49,13 @@
 				Edit Pick Up Report
 			</center>
 		</h3>
-		<h3>
-			<center>
-				Date
-			</center>
-		</h3>
-		
-		<div style="margin: 15px">
-			<input name="mydate" id="mydate" type="date" data-theme="b" data-role="datebox" data-options='{"mode": "flipbox"}'>
+		<div class="div_dim">
+			<label for="name">Date:</label>
+			<input class="date_picker" name="mydate" id="mydate" type="date" data-theme="b" data-role="datebox" data-options='{"mode": "flipbox"}'>
 		</div>
 
-		<div style="margin: 15px">
-			<select name="volunteers" id="volunteers" multiple="multiple" data-native-menu="false">
+		<div class="div_dim">
+			<select class="drop_button" name="volunteers" id="volunteers">
 				<option>Volunteers</option>
 				<option value="mon">1</option>
 				<option value="tue">2</option>
@@ -60,8 +67,8 @@
 			</select>
 		</div>
 
-		<div style="margin: 15px">
-			<select name="donor" id="donor" multiple="multiple" data-native-menu="false">
+		<div class="div_dim">
+			<select class="drop_button" name="donor" id="donor">
 				<option>Donor</option>
 				<option value="mon">1</option>
 				<option value="tue">2</option>
@@ -73,8 +80,21 @@
 			</select>
 		</div>
 
-		<div style="margin: 15px">
-			<select name="recipient" id="recipient" multiple="multiple" data-native-menu="false">
+		<!-- <div class="div_dim">
+			<select class="drop_button" name="recipient" id="recipient" multiple="multiple" data-native-menu="false">
+				<option>Recipient</option>
+				<option value="mon">1</option>
+				<option value="tue">2</option>
+				<option value="wed">3</option>
+				<option value="thu">4</option>
+				<option value="fri">5</option>
+				<option value="sat">6</option>
+				<option value="sun">7</option>
+			</select>
+		</div> -->
+
+		<div class="div_dim">
+			<select class="drop_button" name="recipient" id="recipient">
 				<option>Recipient</option>
 				<option value="mon">1</option>
 				<option value="tue">2</option>
@@ -89,8 +109,8 @@
 		<h3><center>Data</center></h3>	
 		<center>Enter the weight/count for each food type</center>
 
-		<div style="margin: 15px">
-			<select name="produce" id="produce" multiple="multiple" data-native-menu="false">
+		<div class="div_dim">
+			<select style="" class="drop_button" name="produce" id="produce" >
 				<option>Produce</option>
 				<option value="mon">1</option>
 				<option value="tue">2</option>
@@ -102,23 +122,23 @@
 			</select>
 		</div>
 
-		<div style="margin: 15px" data-role="fieldcontain">
+		<div class="field_title" data-role="fieldcontain">
 			<label for="name">Weight:</label>
 			<input type="text" name="name" id="name" value=""  />
 		</div>
 
-		<div style="margin: 15px" data-role="fieldcontain">
+		<div class="field_title" data-role="fieldcontain">
 			<label for="name">Count:</label>
 			<input type="text" name="name" id="name" value=""  />
 		</div>
 
-		<div style="margin: 15px" data-role="fieldcontain">
+		<div class="field_title" data-role="fieldcontain">
 			<label for="name">Description:</label>
 			<input type="text" name="name" id="name" value=""  />
 		</div>
 
-		<div style="margin: 15px">
-			<select name="weighedwith" id="weighedwith">
+		<div class="div_dim">
+			<select class="drop_button" name="weighedwith" id="weighedwith">
 				<option>Weighed With</option>
 				<option value="mon">1</option>
 				<option value="tue">2</option>
@@ -130,8 +150,8 @@
 			</select>
 		</div>
 
-		<div style="margin: 15px">
-			<select name="transportedwith" id="transportedwith">
+		<div class="div_dim">
+			<select class="drop_button" name="transportedwith" id="transportedwith">
 				<option>Transported With</option>
 				<option value="mon">1</option>
 				<option value="tue">2</option>
@@ -143,20 +163,34 @@
 			</select>
 		</div>
 
-		<div style="margin: 15px" data-role="fieldcontain">
+		<div class="field_title" data-role="fieldcontain">
 			<label for="textarea">Notes:</label>
 			<textarea cols="40" rows="8" name="textarea" id="textarea"></textarea>
 
 		</div>
-		
-		<div style="margin: 15px" data-role="fieldcontain">
-	 		<fieldset data-role="controlgroup">
+
+		<div class="field_title" data-role="fieldcontain">
+ 			<fieldset data-role="controlgroup">
 				<legend>Flag for Admin:</legend>
 				<input type="checkbox" name="checkbox-1" id="checkbox-1" class="custom" />
-	    	</fieldset>
+    		</fieldset>
 		</div>
+ 
 
-		<center><a rel="external" href="home.html" data-role="button" data-theme="b" data-inline="true">Save Changes</a></center>
+		<!-- <center>
+			<a rel="external" href="home.html" data-role="button" data-theme="b" data-inline="true">Save Changes
+			</a>
+		</center> -->
+
+		<div class="div_dim">
+			<a rel="external" href="home.html" data-role="button" data-theme="d" data-inline="false">
+				<span class="ui-btn-inner ui-btn-corner-all">
+					<span class="ext_button">
+						Save Changes
+					</span>
+				</span>
+			</a>
+		</div> 
 	</div>
 
 
