--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<h1>BFR</h1>  
 		</div>  
 		<div data-role="content" id="contentConfirmation" name="contentConfirmation" align="center">  
-			<h1>Login Page</h1>  
+			<h1>Log In</h1>  
 			<form id="HLogin" method="POST">  
 				<div data-role="fieldcontain">  
 					<label for="url">Username:</label>  
@@ -37,19 +37,27 @@
 				<div data-role="fieldcontain">  
 					<label for="url">Password:</label>  
 					<input id="Lpassword" name="pwd_r" value="" type="password">            
-				</div>  
-				<a rel="external" href="home.html" data-role="button" data-theme="b" data-inline="true">Sign In</a>
-				
-				<br>
-				<a href="signup.html" data-inline="false">
+				</div> 
+				<div class="div_dim">
+					<a rel="external" href="home.html" data-role="button" data-theme="d" data-inline="false">
+						<span class="ui-btn-inner ui-btn-corner-all">
+							<span class="ext_button">
+								Sign In
+							</span>
+						</span>
+					</a>
+				</div>
+				</br>
+				</br>
+				<a style="font-weight: 200;" href="signup.html" data-inline="false">
 					<span class="ui-btn-inner ui-btn-corner-all">
 						<span class="ui-btn-text">
 							Sign Up
 						</span>
 					</span>
 				</a>
-				<br>
-				<a href="forgotpassword.html">Forgot Your Password?</a>
+				</br>
+				<a style="font-weight: 200;" href="forgotpassword.html">Forgot Your Password?</a>
 			</form> 
 		</div>  
 	</div>  
