--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>Boulder Food Rescue</title>
 	<link rel="stylesheet" href="themes/Bootstrap.css">
+	<link rel="stylesheet" href="themes/application.css">
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0/jquery.mobile.structure-1.4.0.min.css" />
 	<link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
 	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
@@ -18,27 +19,51 @@
 	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.mode.flipbox.min.js"></script>
 	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/i18n/jquery.mobile.datebox.i18n.en_US.utf8.js"></script>
 </head>
+<style type="test/css">
+	.[data-role=footer]{
+		bottom:0;
+		right:0;
+		top:auto! important ;
+		position:absolute !important; 
+	} 
+	.[data-role=header]{
+		top:0; 
+		position:absolute !important; 
+		bottom: auto !important;
+	}
+</style>
 <body>
 	<div data-role="page" id="home">  
 		<div data-position="fixed" data-role="header" data-theme="b">  
 			<!-- <a data-icon="home" data-iconpos="notext" rel="external" href="home.html">Home</a>  --> 
-			<h1>BFR</h1>  
+			<h1>Boulder Food Rescue</h1>  
 		</div> 
-		<h1>Create your BFR Account</h1>
+		<div style="margin: 15px;">
+			<h1>Create An Account</h1>
+		</div>
 		<form id="HLogin" method="POST">  
-			<div data-role="fieldcontain">  
+			<div style="margin: 15px;" data-role="fieldcontain">  
 				<label for="url">Username:</label>  
 				<input class="required" id="Lusername" name="uid_r" value="" type="text">            
 			</div>  
-			<div data-role="fieldcontain">  
-				<label for="url">Password:</label>  
+			<div style="margin: 15px;" data-role="fieldcontain">  
+				<label for="url"><center>Password:</center></label>  
 				<input id="Lpassword" name="pwd_r" value="" type="password">            
 			</div>  
-			<div data-role="fieldcontain">  
+			<div style="margin: 15px;" data-role="fieldcontain">  
 				<label for="url">Confirm Password:</label>  
 				<input id="Lpassword" name="pwd_r" value="" type="password">            
 			</div> 
-			<center><a rel="external" href="index.html" data-role="button" data-theme="b" data-inline="true">Create Account</a></center>
+			<!-- <center><a rel="external" href="index.html" data-role="button" data-theme="b" data-inline="true">Create Account</a></center> -->
+			<div class="div_dim">
+					<a rel="external" href="index.html" data-role="button" data-theme="d" data-inline="false">
+						<span class="ui-btn-inner ui-btn-corner-all">
+							<span class="ext_button">
+								Create Account
+							</span>
+						</span>
+					</a>
+				</div>
 		</form>  
 	</div>
 </body>
