Fixing title visibility in header in all pages

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>Boulder Food Rescue</title>
 	<link rel="stylesheet" href="themes/Bootstrap.css">
+	<link rel="stylesheet" href="themes/application.css">
 	<script href="themes/js/boostrap-dropdown.js"></script>
 	<link rel="stylesheet" href="themes/css/boostrap_2-1-1.css">
 	<script href="themes/js/boostrap-dropdown_2-1-1.js"></script>
@@ -25,7 +26,7 @@
 	<div data-role="page" id="home">  
 		<div data-position="fixed" data-role="header" data-theme="b">  
 			<!-- <a data-icon="home" data-iconpos="notext" rel="external" href="home.html">Home</a>  --> 
-			<h1>BFR</h1>  
+			<h1>Boulder Food Rescue</h1>  
 		</div>  
 		<div data-role="content" id="contentConfirmation" name="contentConfirmation" align="center">  
 			<h1>Log In</h1>  
