--- a/pickupreport.html
+++ b/pickupreport.html
@@ -37,17 +37,18 @@
 				Home
 			</a>  
 			<h1>
-				BFR
+				Boulder Food Rescue
 			</h1> 
-
 			<a rel="external"data-icon="power" data-iconpos="notext" href="index.html">
 				Log Out
 			</a>
 		</div> 
 		<h3>
-			<center>
-				Edit Pick Up Report
-			</center>
+			<div style="font-family: 'Corbel'; font-weight: normal;">
+				<center>
+					Edit Pick Up Report
+				</center>
+			</div>
 		</h3>
 		<div class="div_dim">
 			<label for="name">Date:</label>
@@ -103,8 +104,13 @@
 				<option value="sun">Recipient 7</option>
 			</select>
 		</div>
-
-		<h3><center>Data</center></h3>	
+		<div style="font-family: 'Corbel'; font-weight: normal;">
+			<h3>
+				<center>
+					Data
+				</center>
+			</h3>	
+		</div>
 		<center>Enter the weight/count for each food type</center>
 		<div class="div_dim">
 			<select style="" class="drop_button" name="produce" id="produce" >
