--- a/signup.html
+++ b/signup.html
@@ -19,12 +19,11 @@
 	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.mode.flipbox.min.js"></script>
 	<script type="text/javascript" src="http://dev.jtsage.com/cdn/datebox/i18n/jquery.mobile.datebox.i18n.en_US.utf8.js"></script>
 </head>
-
 <body>
 	<div data-role="page" id="home">  
 		<div data-position="fixed" data-role="header" data-theme="b">  
 			<!-- <a data-icon="home" data-iconpos="notext" rel="external" href="home.html">Home</a>  --> 
-			<h1>Boulder Food Rescue</h1>  
+			<h1>Food Rescue Robot</h1>  
 		</div> 
 		<div style="margin: 15px; font-family: 'Corbel'; font-weight: normal;">
 			<h1><center>Create An Account</center></h1>
