--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -23,7 +23,7 @@
 	<div data-role="page" id="home">  
 		<div data-position="fixed" data-role="header" data-theme="b">  
 			<!-- <a data-icon="home" data-iconpos="notext" rel="external" href="home.html">Home</a>  --> 
-			<h1>Boulder Food Rescue</h1>  
+			<h1>Food Rescue Robot</h1>  
 		</div> 
 		<h1>Forgot Your Password</h1>
 		<form id="HLogin" method="POST">  
