--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<div data-role="page" id="home">  
 		<div data-position="fixed" data-role="header" data-theme="b">  
 			<!-- <a data-icon="home" data-iconpos="notext" rel="external" href="home.html">Home</a>  --> 
-			<h1>Boulder Food Rescue</h1>  
+			<h1>Food Rescue Robot</h1>  
 		</div>  
 		<div data-role="content" id="contentConfirmation" name="contentConfirmation" align="center">  
 			<h1>Log In</h1>  
